--- a/css/main.css
+++ b/css/main.css
@@ -331,7 +331,7 @@ footer h6 {
     background-color: transparent;
 }
 
-#search {
+#search, #deskSearch {
     border: 1px solid var(--darkest-blue);
     border-radius: 20px;
     height: 1.5rem;
@@ -345,7 +345,10 @@ footer h6 {
 
 #search:hover,
 #search:active,
-#search:focus {
+#search:focus,
+#deskSearch:hover,
+#deskSearch:focus,
+#deskSearch:active {
     cursor: pointer;
     outline: none;
     border: 2px solid var(--darkest-blue);
@@ -788,6 +791,36 @@ select {
 
 /*PRODUCT DISPLAY*/
 
+.product-div{
+    justify-content: end !important;
+    border: 2px solid red;
+    margin-left: 15rem;
+    padding: 0rem 3rem 0rem 3rem;
+    margin-bottom: 3rem;
+}
+.product-div div:first-child{
+    width: 100%;
+    background-color: var(--dark-blue);
+    color: white;
+}
+.product-div-info{
+    padding: 0rem 3rem 0rem 2rem;
+}
+.product-div-info h1{
+    font-size: 1.6rem;
+    font-weight: bold;
+}
+.product-div-info p{
+    font-size: small;
+}
+.product-div img{
+    width: 100%;
+    height: 18rem;
+    border-radius: 0px 8px 8px 0px;
+}
+
+
+
 /*responsive grid layout*/
 .main-container {
     min-height: 1000px;
@@ -982,6 +1015,10 @@ select {
         justify-content: center;
         align-items: center;
     }
+    .products-footer{
+        position: relative;
+        z-index: 999;
+    }
 
     .footer-flex {
         display: flex;
@@ -1110,7 +1147,7 @@ select {
         height: 55rem;
         background-color: transparent;
         border-right: 2px solid var(--medium-blue);
-        position: absolute;
+        position: fixed;
         top: 0;
         bottom: 0;
         left: 0;
@@ -1118,6 +1155,7 @@ select {
         margin-top: 120px;
         justify-content: start !important;
         align-items: start;
+        z-index: 1;
     }
 
     #filters {
