--- a/css/main.css
+++ b/css/main.css
@@ -1341,7 +1341,16 @@ select {
     }
 
     .form-cont {
-        width: 80%;
+        width: 100%;
+    }
+    .contact{
+        width: 100%;
+    }
+    form input, form textarea{
+        width: 25rem;    
+    }
+    .contact-info{
+        padding-left: 2.5rem;
     }
 
     /*FILTERS*/
