--- a/css/main.css
+++ b/css/main.css
@@ -99,9 +99,7 @@ a {
 a:hover {
     cursor: pointer;
 }
-.desk-nav a:hover{
-    color: white;
-}
+
 
 .desk-nav a::after {
     content: '';
@@ -142,6 +140,12 @@ a {
     top: 1rem;
     width: 40%;
     font-size: 1.3rem;
+}
+.logo{
+    border-radius: 50px;
+    position: fixed;
+    left: 19px;
+    top: 8px;
 }
 
 header {
@@ -339,10 +343,10 @@ footer h6 {
     border: 1px solid var(--darkest-blue);
     border-radius: 20px;
     height: 1.5rem;
-    width: 12rem;
+    width: 10rem;
     position: absolute;
     right: 0;
-    padding: 0rem 1rem 0rem 1rem;
+    padding: 0rem 0.8rem 0rem 0.8rem;
     font-size: 0.8rem;
     background-color: rgb(243, 243, 243);
 }
@@ -1065,6 +1069,58 @@ select {
     width: 100%;
     height: 100%;
 }
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll for large images */
+    background-color: rgba(0, 0, 0, 0.8); /* Black with transparency */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+}
+
+/* Close button */
+.modal .close {
+    position: absolute;
+    top: 20px;
+    right: 35px;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    cursor: pointer;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 10px;
+    border-radius: 50%;
+}
+
+.modal-content {
+    object-fit: contain;
+    margin: auto;
+    display: block;
+    max-width: 50%;
+    max-height: 90%; /* Ensure the image fits the screen */
+    border: 5px solid white;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.6);
+}
+
+/* opening animation */
+.modal-content {
+    animation-name: zoom;
+    animation-duration: 0.4s;
+}
+
+@keyframes zoom {
+    from {
+        transform: scale(0);
+    }
+    to {
+        transform: scale(1);
+    }
+}
 
 /*END*/
 
@@ -1194,7 +1250,7 @@ select {
 
     li {
         all: unset;
-        padding: 0.4rem 0.7rem 0.4rem 0.7rem;
+        padding: 0.4rem 1.5rem 0.4rem 1.5rem;
         font-family: "italiana";
         background-position: right;
         border-radius: 25px;
@@ -1465,5 +1521,8 @@ select {
 
 #slider1{
     width: 35% !important;
+}
+#search, #deskSearch {
+    width: 12rem;
 }
 }
