--- a/css/main.css
+++ b/css/main.css
@@ -368,8 +368,8 @@ footer h6 {
     margin-top: 3rem;
 }
 .cta button, .cta2 button{
-    background-color: var(--darkest-blue);
-    color: white;
+    background-color: var(--light-blue);
+    color: rgb(22, 21, 21);
     font-weight: normal;
 }
 .cta{
@@ -379,7 +379,7 @@ footer h6 {
 }
 .cta2{
     color: white;
-    padding: 0.5rem;
+    padding: 0.8rem;
 }
 .cta2 h1{
     font-size: 1rem;
@@ -1505,11 +1505,9 @@ select {
     flex-direction: row;
     justify-content: center !important;
     align-items: center;
-    border: 2px solid red;
 }
 .cta-2{
     flex-direction: column;
-    border: 2px solid green;
     justify-content: space-between;
     display: flex;
     flex-direction: column;
@@ -1519,6 +1517,12 @@ select {
 .background-img2, .background-img3{
     height: 17rem;
     width: 20rem;
+}
+.cta-2 h1{
+    font-size: 1.5rem;
+}
+.cta-2 button{
+    font-size: 1rem;
 }
 }
 
@@ -1871,8 +1875,18 @@ select {
     width: 60%;
 }
 /* END */
-
-
+.background-img1{
+    width: 30rem;
+    height: 40rem;
+}
+.cta-2{
+    width: 35rem;
+    height: 40rem;
+}
+.background-img2, .background-img3{
+    width: 33rem;
+    height: 19.5rem;
+}
 }
 
 
